# FastApi_todo_api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.dev2  README.md  compose.yaml  database.py  main.py  models.py  oauth2.py  progress.md  pyproject.toml  schemas.py  utils.py
routes/: auth.py  todos.py  users.py
